# Communication_Componet

./: .gitignore
include/: client_task.h  thread.h
src/: CMakeLists.txt  client_task.cpp  com_task.cpp  com_task.h  server_task.cpp  server_task.h  task.h  thread.cpp  thread_pool.cpp  thread_pool.h
test/test_server_task/src/: CMakeLists.txt  test_server_task.cpp
test/test_thread_pool/src/: CMakeLists.txt  test_thread_pool.cpp
